Adapt distribs to WebGL

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,17 @@
 .syncignore
 backup.sh
 restore.sh
-clean.sh
-sync.sh
+upload.*.sh
 TAGS
 minus.js
+
 distrib/pokki/chatqna.txt
+distrib/pokki/minus.js
+distrib/pokki/shader
+
+distrib/progfolio/.htaccess
+distrib/progfolio/minus.css
+distrib/progfolio/minus.html
+distrib/progfolio/minus.ico
+distrib/progfolio/minus.js
+distrib/progfolio/shader
