Cleanup build processs

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
-.gitignore
 .syncignore
 backup.sh
 restore.sh
 upload.*.sh
 TAGS
-minus.js
 bulk
-js/dep
-
-distrib/pokki/minus.js
-distrib/pokki/shader
-
-distrib/progfolio/.htaccess
-distrib/progfolio/minus.css
-distrib/progfolio/minus.html
-distrib/progfolio/minus.ico
-distrib/progfolio/minus.js
-distrib/progfolio/shader
+build
+jsdep/*.js
